# gitsock

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.json
.github/workflows/: rust.yml
src/: config.rs  crypto.rs  initializer.rs  main.rs  server.rs  services.rs  types.rs  utils.rs
src/commands/: mod.rs
src/commands/account/: add.rs  mod.rs  remove.rs
src/commands/hooks/: mod.rs
src/commands/repo/: origin.rs
src/commands/root/: clone.rs  commit.rs  list.rs  me.rs  mod.rs  setup.rs  switch.rs
src/commands/ssh/: add.rs  list.rs  mod.rs
src/local_commands/: git.rs
src/state/: account_state.rs  key_state.rs  mod.rs
