[package]
name = "gitsock"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
oauth2 = "5.0.0"
once_cell = "1.21.3"
open = "5.3.2"
rand_core = "0.9.3"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tiny_http = "0.12.0"
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
rsa = "0.8"
rand = "0.8"
base64 = "0.21"
chrono = "0.4.41"
